# SAPassistant

./: A10.vbs  CMakeLists.txt  Chatbee.qss  License.txt  README.md  SettingsDialog.cpp  cold.vbs  colk.vbs  create dry.vbs  dry.vbs  main.cpp  resources.qrc  wholesale.vbs  widget - Copy (2).ui  widget - Copy.ui  widget.cpp  widget.h  widget.ui
ExtData/: A10.vbs  cold.vbs  colk.vbs  create cold.vbs  dry.vbs  inventory.vbs  login.vbs  wholesale.vbs
installer/: installer creator.iss  widget.cpp
